--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-multi-date-picker": "^4.4.1"
+    "react-multi-date-picker": "^4.4.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
