--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-date-picker": "^4.4.1",
