--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "date-fns": "^3.3.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "react-multi-date-picker": "^4.4.1",
     "recoil": "^0.7.7"
