--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-canvas-confetti": "^2.0.5",
     "react-dom": "^18",
     "react-multi-date-picker": "^4.4.1",
     "recoil": "^0.7.7"
