--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-calendar": "^4.8.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-multi-date-picker": "^4.4.1",
     "recoil": "^0.7.7"
